Fix alignment of login screen links in older IE versions

--- a/www/extra-css/i3-login-default.css
+++ b/www/extra-css/i3-login-default.css
@@ -66,7 +66,7 @@ body {
 #subPane ul {
 	display:inline-block;
 	text-align:left;
-	margin-left:-2em;
+	/*margin-left:-2em;*/
 	padding:0px 32px;
 	list-style-type:none;
 }
